[package]
name = "raylib_imgui"
version = "1.0.2"
authors = ["NexushasTaken", "NexushasTaken <nexushastaken@gmail.com>"]
edition = "2021"
description = "A Raylib based backend for imgui"
readme = "README.md"
homepage = "https://github.com/NexushasTaken/raylib_imgui"
repository = "https://github.com/NexushasTaken/raylib_imgui"
license-file = "LICENSE"
keywords = ["gamedev", "graphics", "raylib", "imgui"]
categories = ["gui"]

[dependencies]
imgui = { git = "https://github.com/imgui-rs/imgui-rs", tag = "v0.12.0", features=["docking"] }
raylib = { git = "https://github.com/raylib-rs/raylib-rs", tag = "v6.0.0" }
